install-meta (0.2.23) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 07 May 2008 01:19:57 +0200

install-meta (0.2.22) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * bump compat level to 7.

  [ Horst Tritremmel ]
  * Education updated 

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 07 May 2008 01:17:32 +0200

install-meta (0.2.21) unstable; urgency=low

  * Added Package for openoffice german

 -- Joaquim Boura <x-un-i@sidux.com>  Mon, 28 Apr 2008 22:59:44 +0200

install-meta (0.2.20) unstable; urgency=low

  * removed xmms from fvwm-meta.

 -- Ferdinand Thommes <devil@sidux.com>  Sat, 05 Apr 2008 09:09:29 +0200

install-meta (0.2.19) unstable; urgency=low

  * fixed the pt language files. Thanks to Rui Umbelino (VaMPiRiC_CRow)

 -- Joaquim Boura <x-un-i@sidux.com>  Mon, 31 Mar 2008 00:54:34 +0200

install-meta (0.2.18) unstable; urgency=low

  * Metapackage Games V7.3

 -- Horst Tritremmel <hjt@sidux.com>  Thu, 27 Mar 2008 16:00:37 +0100

install-meta (0.2.17) unstable; urgency=low

  * Meta-Package Games V 7.1
  * metapackage-installer.xpm changed to metapackage-installer.png
  * Mate-Package Education updated 
  * bibletime removed

 -- Horst Tritremmel <hjt@sidux.com>  Sat, 22 Mar 2008 20:49:55 +0100

install-meta (0.2.16) unstable; urgency=low

  * fix bashisms.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 14 Mar 2008 01:39:47 +0100

install-meta (0.2.15) unstable; urgency=low

  * metapackages Games updated

 -- Horst Tritremmel <hjt@sidux.com>  Wed, 12 Mar 2008 19:48:13 +0100

install-meta (0.2.14) unstable; urgency=low

  * pt language files. Thanks to Rui Umbelino (VaMPiRiC_CRoW)

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 09 Mar 2008 17:27:10 +0100

install-meta (0.2.13) unstable; urgency=low

  * packages Games updated 

 -- Horst Tritremmel <hjt@sidux.com>  Fri, 07 Mar 2008 00:10:31 +0100

install-meta (0.2.12) unstable; urgency=low

  [ Horst Tritremmel ]