@@ -1,8 +1,12 @@
 install-meta (0.2.23) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 07 May 2008 01:19:57 +0200
+  [ Horst Tritremmel ]
+  * bugfix for source, s/source/./g 
+
+ -- Horst Tritremmel <hjt@sidux.com>  Mon, 19 May 2008 17:14:46 +0200
 
 install-meta (0.2.22) unstable; urgency=low
 
